# giga-data-sharing

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  alembic.ini  delta-prod-docker-entrypoint.sh  delta.dev.Dockerfile  delta.prod.Dockerfile  docker-compose.yml  gunicorn.conf.py  main.py  proxy-dev-docker-entrypoint.sh  proxy.dev.Dockerfile  proxy.prod.Dockerfile  pyproject.toml
azure/: azure-pipelines-delete.yaml  azure-pipelines-dev.yaml  azure-pipelines-prd.yaml  azure-pipelines-staging.yaml  azure-pipelines-stg.yaml
azure/templates/: create-config.yaml  helm-deploy.yaml  variables.yaml  workflow.yaml
conf-template/: core-site.xml  delta-sharing-server-config.yml  delta-sharing-server.yaml
custom-sas-provider/: .dockerignore  pom.xml
custom-sas-provider/src/main/java/internal/giga/customSasProvider/: CustomSasProvider.java
custom-sas-provider/src/test/java/internal/giga/customSasProvider/: AppTest.java
data_sharing/: app.py  constants.py  db.py  permissions.py  settings.py
data_sharing/annotations/: api_key.py  delta_sharing.py  responses.py
data_sharing/crud/: api_key.py
data_sharing/db/: db.py
data_sharing/fixtures/: roles.yaml  schemas.yaml
data_sharing/internal/: api_key.py  hashing.py
data_sharing/migrations/: env.py
data_sharing/migrations/versions/: 5fd7db57fba6_initial_migration.py  6d8fc1d4559b_initial.py  add_schema_model.py  c2ed12933e52_initial.py  e840d0eda296_initial.py  eb349dd6105f_initial_migration.py
data_sharing/models/: __init__.py  api_key.py
data_sharing/permissions/: __init__.py  access_control.py  base.py  permissions.py  scheme.py  utils.py
data_sharing/routers/: api_key.py  delta_sharing.py  role.py
data_sharing/schemas/: api_key.py  delta.py  delta_sharing.py  delta_sharing_config.py  parquet.py
data_sharing/utils/: header.py  qs.py  responses.py  string.py
docs/: README.md  deployment.md  development.md
infra/helm/: pg-values.yaml
infra/helm/data-sharing-delta/: Chart.yaml  values.yaml
infra/helm/data-sharing-delta/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  service.yaml  serviceaccount.yaml
infra/helm/data-sharing-delta/templates/tests/: test-connection.yaml
infra/helm/data-sharing-proxy/: Chart.yaml  values.yaml
infra/helm/data-sharing-proxy/charts/: postgresql-13.2.21.tgz
infra/helm/data-sharing-proxy/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  initjob.yaml  pdb.yaml  service.yaml  serviceaccount.yaml
infra/helm/data-sharing-proxy/templates/tests/: test-connection.yaml
infra/k8s/: configmap.yaml  ingress-dev.yaml  ingress-staging.yaml  namespace.yaml
scripts/: countries.json  countries.yaml  generate_delta_config.py  generate_role_fixtures.py  load_fixtures.py
