[tool.poetry]
name = "giga-data-sharing"
version = "0.1.0"
description = ""
authors = ["Thinking Machines <hello@thinkingmachin.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
delta-sharing = "^1.0.1"
deltalake = "^0.12.0"
fastapi = "^0.104.1"
pydantic = { extras = ["email"], version = "^2.4.2" }
pydantic-settings = "^2.0.3"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
gunicorn = "^21.2.0"
fastapi-azure-auth = "^4.3.0"
loguru = "^0.7.2"
azure-storage-blob = "^12.18.3"
orjson = "^3.9.10"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
ipython = "^8.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py311"]
preview = true

[tool.isort]
profile = "black"
